propfuzz/tests/compile-fail/bad-args.stderr
error: expected integer
 --> $DIR/bad-args.rs:9:20
  |
9 | #[propfuzz(cases = true, fork = 1024)]
  |                    ^^^^

error: expected bool
 --> $DIR/bad-args.rs:9:33
  |
9 | #[propfuzz(cases = true, fork = 1024)]
  |                                 ^^^^

error: key specified more than once
  --> $DIR/bad-args.rs:13:26
   |
13 | #[propfuzz(cases = 1024, cases = 2048)]
   |                          ^^^^^

error: key specified more than once
  --> $DIR/bad-args.rs:17:12
   |
17 | #[propfuzz(cases = 2048)]
   |            ^^^^^

error: argument not recognized
  --> $DIR/bad-args.rs:22:12
   |
22 | #[propfuzz(wat)]
   |            ^^^

error: expected parentheses: #[propfuzz(...)]
  --> $DIR/bad-args.rs:23:12
   |
23 | #[propfuzz = "wat"]
   |            ^

error: key specified more than once
  --> $DIR/bad-args.rs:28:12
   |
28 | #[propfuzz(cases = 512)]
   |            ^^^^^

error: key specified more than once
  --> $DIR/bad-args.rs:31:16
   |
31 |     #[propfuzz(strategy = "any::<u8>()")]
   |                ^^^^^^^^
